test/semantic_errors/invalid_main_def1.mc
bool main() { /* main cannot return bool */
    
}